# Starship

./: .gitignore  Makefile.vita  config.yml  gen_vita.bat  properties.h
include/: audiothread_cmd.h  portable-file-dialogs.h
livearea/: template.xml
prism-processor-main/: .gitignore  CMakeLists.txt  LICENSE  README.md
prism-processor-main/.github/workflows/: linux.yml  mac.yml  windows.yml
prism-processor-main/examples/: iftest.fs  script.opengl.fs
prism-processor-main/src/: main.cpp
prism-processor-main/src/prism/: ast.cpp  ast.h  lexer.cpp  lexer.h  processor.cpp  processor.h
prism-processor-main/src/prism/utils/: exceptions.h  gv.cpp  gv.h  invoke.c  invoke.h
spdlog/include/spdlog/: common-inl.h  spdlog.h
spdlog/include/spdlog/details/: os-inl.h
spdlog/include/spdlog/fmt/bundled/: core.h
src/audio/: audio_general.c  audio_load.c  audio_seqplayer.c  audio_synthesis.c  audio_thread.c  mixer.c
src/engine/: fox_col2.c  fox_colheaders.c  fox_edata.c  fox_edata_info.c  fox_load.c  fox_load_inits.c  fox_rcp.c  fox_rcp_setup.c  fox_std_lib.c
src/overlays/ovl_ending/: fox_end2.c  fox_end2_data.c
src/port/: Engine.cpp  Engine.h  Game.cpp
src/port/ui/: ImguiUI.cpp
vita/: BS_thread_pool.hpp  install_config.h
